feature: add section about simulating continuous values out of categorical ones

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,6 +9,8 @@ website:
         text: Home
       - treatment.qmd
       - communication.qmd
+      - href: simulate_continuous_values_out_of_categorical_ones.qmd
+        text: Simulate Continuous Values
 
 format:
   html:
